--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
-version: '3'
+version: "3.4"
 services:
-  app:
-    build: tcmg476 .
+  web:
+    image: tcmg476
     ports:
-     - "5000:5000"
-
-  redis:
-    image: "redis:alpine"
-    ports:
-      - "6379:6379"
+      - "5000:5000"
     networks:
       - webnet
+  redis:
+    image: redis
+    networks:
+      - webnet
+networks:
+webnet:
